test/domains/compilerErrors/notsupportedIndexOrder-ok.chpl
use notsupportedCommon;

writeln(dfltRectangularBase.indexOrder(1));
//writeln(dfltAssociativeBase.indexOrder(1));
writeln(DistributedBase.indexOrder(1));
writeln(dfltRectangularSubdomain.indexOrder(1));
//writeln(dfltAssociativeSubdomain.indexOrder(1));
writeln(DistributedSubdomain.indexOrder(1));
//writeln(dfltRectangularSparseSub.indexOrder(1));
//writeln(dfltAssociativeSparseSub.indexOrder(1));
//writeln(DistributedSparseSub.indexOrder(1));
